antlr/protobj_parser.go
// Code generated from D:/code/protobjc/protobjc-java/src/main/resources\Protobj.g4 by ANTLR 4.10.1. DO NOT EDIT.

package antlr // Protobj
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ProtobjParser struct {
	*antlr.BaseParser
}

var protobjParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func protobjParserInit() {
	staticData := &protobjParserStaticData
	staticData.literalNames = []string{
		"", "'import'", "'package'", "'lst'", "'map'", "'bool'", "'i8'", "'u8'",
		"'i16'", "'u16'", "'i32'", "'u32'", "'s32'", "'f32'", "'sf32'", "'i64'",
		"'u64'", "'s64'", "'f64'", "'sf64'", "'string'", "'double'", "'float'",
		"'enum'", "'message'", "'ext'", "'set'", "'arr'", "'dft'", "';'", "'='",
		"'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'.'", "','",
		"':'", "'+'", "'-'",
	}
	staticData.symbolicNames = []string{
		"", "IMPORT", "PACKAGE", "REPEATED", "MAP", "BOOL", "I8", "U8", "I16",
		"U16", "I32", "U32", "S32", "F32", "SF32", "I64", "U64", "S64", "F64",
		"SF64", "STRING", "DOUBLE", "FLOAT", "ENUM", "MESSAGE", "EXTEND", "SET",
		"ARRAY", "DEFAULT", "SEMI", "EQ", "LP", "RP", "LB", "RB", "LC", "RC",
		"LT", "GT", "DOT", "COMMA", "COLON", "PLUS", "MINUS", "STR_LIT", "BOOL_LIT",
		"FLOAT_LIT", "INT_LIT", "IDENTIFIER", "WS", "LINE_COMMENT", "COMMENT",
	}
	staticData.ruleNames = []string{
		"protobj", "packageStatement", "importStatement", "optionName", "field",
		"modifier", "fieldOptions", "fieldOption", "fieldNumber", "extendsField",
		"mapField", "mapType", "keyType", "type_", "topLevelDef", "enumDef",
		"enumBody", "enumElement", "enumField", "messageDef", "messageIndex",
		"messageBody", "messageElement", "constant", "blockLit", "emptyStatement_",
		"ident", "fullIdent", "messageName", "enumName", "fieldName", "mapName",
		"messageType", "enumType", "intLit", "strLit", "boolLit", "floatLit",
		"keywords",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ProtobjParserInit initializes any static state used to implement ProtobjParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewProtobjParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ProtobjParserInit() {
	staticData := &protobjParserStaticData
	staticData.once.Do(protobjParserInit)
}

// NewProtobjParser produces a new parser instance for the optional input antlr.TokenStream.
func NewProtobjParser(input antlr.TokenStream) *ProtobjParser {
	ProtobjParserInit()
	this := new(ProtobjParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &protobjParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Protobj.g4"

	return this
}

// ProtobjParser tokens.
const (
	ProtobjParserEOF          = antlr.TokenEOF
	ProtobjParserIMPORT       = 1
	ProtobjParserPACKAGE      = 2
	ProtobjParserREPEATED     = 3
	ProtobjParserMAP          = 4
	ProtobjParserBOOL         = 5
	ProtobjParserI8           = 6
	ProtobjParserU8           = 7
	ProtobjParserI16          = 8
	ProtobjParserU16          = 9
	ProtobjParserI32          = 10
	ProtobjParserU32          = 11
	ProtobjParserS32          = 12
	ProtobjParserF32          = 13
	ProtobjParserSF32         = 14
	ProtobjParserI64          = 15
	ProtobjParserU64          = 16
	ProtobjParserS64          = 17
	ProtobjParserF64          = 18
	ProtobjParserSF64         = 19
	ProtobjParserSTRING       = 20
	ProtobjParserDOUBLE       = 21
	ProtobjParserFLOAT        = 22
	ProtobjParserENUM         = 23
	ProtobjParserMESSAGE      = 24
	ProtobjParserEXTEND       = 25
	ProtobjParserSET          = 26
	ProtobjParserARRAY        = 27
	ProtobjParserDEFAULT      = 28
	ProtobjParserSEMI         = 29
	ProtobjParserEQ           = 30
	ProtobjParserLP           = 31
	ProtobjParserRP           = 32
	ProtobjParserLB           = 33
	ProtobjParserRB           = 34
	ProtobjParserLC           = 35
	ProtobjParserRC           = 36
	ProtobjParserLT           = 37
	ProtobjParserGT           = 38
	ProtobjParserDOT          = 39
	ProtobjParserCOMMA        = 40
	ProtobjParserCOLON        = 41
	ProtobjParserPLUS         = 42
	ProtobjParserMINUS        = 43
	ProtobjParserSTR_LIT      = 44
	ProtobjParserBOOL_LIT     = 45
	ProtobjParserFLOAT_LIT    = 46
	ProtobjParserINT_LIT      = 47
	ProtobjParserIDENTIFIER   = 48
	ProtobjParserWS           = 49
	ProtobjParserLINE_COMMENT = 50
	ProtobjParserCOMMENT      = 51
)

// ProtobjParser rules.
const (
	ProtobjParserRULE_protobj          = 0
	ProtobjParserRULE_packageStatement = 1
	ProtobjParserRULE_importStatement  = 2
	ProtobjParserRULE_optionName       = 3
	ProtobjParserRULE_field            = 4
	ProtobjParserRULE_modifier         = 5
	ProtobjParserRULE_fieldOptions     = 6
	ProtobjParserRULE_fieldOption      = 7
	ProtobjParserRULE_fieldNumber      = 8
	ProtobjParserRULE_extendsField     = 9
	ProtobjParserRULE_mapField         = 10
	ProtobjParserRULE_mapType          = 11
	ProtobjParserRULE_keyType          = 12
	ProtobjParserRULE_type_            = 13
	ProtobjParserRULE_topLevelDef      = 14
	ProtobjParserRULE_enumDef          = 15
	ProtobjParserRULE_enumBody         = 16
	ProtobjParserRULE_enumElement      = 17
	ProtobjParserRULE_enumField        = 18
	ProtobjParserRULE_messageDef       = 19
	ProtobjParserRULE_messageIndex     = 20
	ProtobjParserRULE_messageBody      = 21
	ProtobjParserRULE_messageElement   = 22
	ProtobjParserRULE_constant         = 23
	ProtobjParserRULE_blockLit         = 24
	ProtobjParserRULE_emptyStatement_  = 25
	ProtobjParserRULE_ident            = 26
	ProtobjParserRULE_fullIdent        = 27
	ProtobjParserRULE_messageName      = 28
	ProtobjParserRULE_enumName         = 29
	ProtobjParserRULE_fieldName        = 30
	ProtobjParserRULE_mapName          = 31
	ProtobjParserRULE_messageType      = 32
	ProtobjParserRULE_enumType         = 33
	ProtobjParserRULE_intLit           = 34
	ProtobjParserRULE_strLit           = 35
	ProtobjParserRULE_boolLit          = 36
	ProtobjParserRULE_floatLit         = 37
	ProtobjParserRULE_keywords         = 38
)

// IProtobjContext is an interface to support dynamic dispatch.
type IProtobjContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProtobjContext differentiates from other interfaces.
	IsProtobjContext()
}

type ProtobjContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProtobjContext() *ProtobjContext {
	var p = new(ProtobjContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtobjParserRULE_protobj
	return p
}

func (*ProtobjContext) IsProtobjContext() {}

func NewProtobjContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProtobjContext {
	var p = new(ProtobjContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtobjParserRULE_protobj

	return p
}

func (s *ProtobjContext) GetParser() antlr.Parser { return s.parser }

func (s *ProtobjContext) PackageStatement() IPackageStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageStatementContext)
}

func (s *ProtobjContext) EOF() antlr.TerminalNode {
	return s.GetToken(ProtobjParserEOF, 0)
}

func (s *ProtobjContext) AllImportStatement() []IImportStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IImportStatementContext); ok {
			len++
		}
	}

	tst := make([]IImportStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IImportStatementContext); ok {
			tst[i] = t.(IImportStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProtobjContext) ImportStatement(i int) IImportStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStatementContext)
}

func (s *ProtobjContext) AllTopLevelDef() []ITopLevelDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITopLevelDefContext); ok {
			len++
		}
	}

	tst := make([]ITopLevelDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITopLevelDefContext); ok {
			tst[i] = t.(ITopLevelDefContext)
			i++
		}
	}

	return tst
}

func (s *ProtobjContext) TopLevelDef(i int) ITopLevelDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopLevelDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopLevelDefContext)
}

func (s *ProtobjContext) AllEmptyStatement_() []IEmptyStatement_Context {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEmptyStatement_Context); ok {
			len++
		}
	}

	tst := make([]IEmptyStatement_Context, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEmptyStatement_Context); ok {
			tst[i] = t.(IEmptyStatement_Context)
			i++
		}
	}

	return tst
}

func (s *ProtobjContext) EmptyStatement_(i int) IEmptyStatement_Context {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEmptyStatement_Context); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEmptyStatement_Context)
}

func (s *ProtobjContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProtobjContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProtobjContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.EnterProtobj(s)
	}
}

func (s *ProtobjContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.ExitProtobj(s)
	}
}

func (p *ProtobjParser) Protobj() (localctx IProtobjContext) {
	this := p
	_ = this

	localctx = NewProtobjContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ProtobjParserRULE_protobj)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(78)
		p.PackageStatement()
	}
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<ProtobjParserIMPORT)|(1<<ProtobjParserENUM)|(1<<ProtobjParserMESSAGE)|(1<<ProtobjParserSEMI))) != 0 {
		p.SetState(82)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case ProtobjParserIMPORT:
			{
				p.SetState(79)
				p.ImportStatement()
			}

		case ProtobjParserENUM, ProtobjParserMESSAGE:
			{
				p.SetState(80)
				p.TopLevelDef()
			}

		case ProtobjParserSEMI:
			{
				p.SetState(81)
				p.EmptyStatement_()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(86)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(87)
		p.Match(ProtobjParserEOF)
	}

	return localctx
}

// IPackageStatementContext is an interface to support dynamic dispatch.
type IPackageStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPackageStatementContext differentiates from other interfaces.
	IsPackageStatementContext()
}

type PackageStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageStatementContext() *PackageStatementContext {
	var p = new(PackageStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtobjParserRULE_packageStatement
	return p
}

func (*PackageStatementContext) IsPackageStatementContext() {}

func NewPackageStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageStatementContext {
	var p = new(PackageStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtobjParserRULE_packageStatement

	return p
}

func (s *PackageStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageStatementContext) PACKAGE() antlr.TerminalNode {
	return s.GetToken(ProtobjParserPACKAGE, 0)
}

func (s *PackageStatementContext) FullIdent() IFullIdentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFullIdentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFullIdentContext)
}

func (s *PackageStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(ProtobjParserSEMI, 0)
}

func (s *PackageStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.EnterPackageStatement(s)
	}
}

func (s *PackageStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.ExitPackageStatement(s)
	}
}

func (p *ProtobjParser) PackageStatement() (localctx IPackageStatementContext) {
	this := p
	_ = this

	localctx = NewPackageStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ProtobjParserRULE_packageStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(89)
		p.Match(ProtobjParserPACKAGE)
	}
	{
		p.SetState(90)
		p.FullIdent()
	}
	{
		p.SetState(91)
		p.Match(ProtobjParserSEMI)
	}

	return localctx
}

// IImportStatementContext is an interface to support dynamic dispatch.
type IImportStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportStatementContext differentiates from other interfaces.
	IsImportStatementContext()
}

type ImportStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStatementContext() *ImportStatementContext {
	var p = new(ImportStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtobjParserRULE_importStatement
	return p
}

func (*ImportStatementContext) IsImportStatementContext() {}

func NewImportStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStatementContext {
	var p = new(ImportStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtobjParserRULE_importStatement

	return p
}

func (s *ImportStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStatementContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(ProtobjParserIMPORT, 0)
}

func (s *ImportStatementContext) FullIdent() IFullIdentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFullIdentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFullIdentContext)
}

func (s *ImportStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(ProtobjParserSEMI, 0)
}

func (s *ImportStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.EnterImportStatement(s)
	}
}

func (s *ImportStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.ExitImportStatement(s)
	}
}

func (p *ProtobjParser) ImportStatement() (localctx IImportStatementContext) {
	this := p
	_ = this

	localctx = NewImportStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ProtobjParserRULE_importStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(93)
		p.Match(ProtobjParserIMPORT)
	}
	{
		p.SetState(94)
		p.FullIdent()
	}
	{
		p.SetState(95)
		p.Match(ProtobjParserSEMI)
	}

	return localctx
}

// IOptionNameContext is an interface to support dynamic dispatch.
type IOptionNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOptionNameContext differentiates from other interfaces.
	IsOptionNameContext()
}

type OptionNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOptionNameContext() *OptionNameContext {
	var p = new(OptionNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtobjParserRULE_optionName
	return p
}

func (*OptionNameContext) IsOptionNameContext() {}

func NewOptionNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OptionNameContext {
	var p = new(OptionNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtobjParserRULE_optionName

	return p
}

func (s *OptionNameContext) GetParser() antlr.Parser { return s.parser }

func (s *OptionNameContext) FullIdent() IFullIdentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFullIdentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFullIdentContext)
}

func (s *OptionNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OptionNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OptionNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.EnterOptionName(s)
	}
}

func (s *OptionNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.ExitOptionName(s)
	}
}

func (p *ProtobjParser) OptionName() (localctx IOptionNameContext) {
	this := p
	_ = this

	localctx = NewOptionNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ProtobjParserRULE_optionName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(97)
		p.FullIdent()
	}

	return localctx
}

// IFieldContext is an interface to support dynamic dispatch.
type IFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldContext differentiates from other interfaces.
	IsFieldContext()
}

type FieldContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldContext() *FieldContext {
	var p = new(FieldContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtobjParserRULE_field
	return p
}

func (*FieldContext) IsFieldContext() {}

func NewFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldContext {
	var p = new(FieldContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtobjParserRULE_field

	return p
}

func (s *FieldContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldContext) Modifier() IModifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModifierContext)
}

func (s *FieldContext) Type_() IType_Context {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_Context); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_Context)
}

func (s *FieldContext) FieldName() IFieldNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldNameContext)
}

func (s *FieldContext) EQ() antlr.TerminalNode {
	return s.GetToken(ProtobjParserEQ, 0)
}

func (s *FieldContext) FieldNumber() IFieldNumberContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldNumberContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldNumberContext)
}

func (s *FieldContext) SEMI() antlr.TerminalNode {
	return s.GetToken(ProtobjParserSEMI, 0)
}

func (s *FieldContext) LB() antlr.TerminalNode {
	return s.GetToken(ProtobjParserLB, 0)
}

func (s *FieldContext) FieldOptions() IFieldOptionsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldOptionsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldOptionsContext)
}

func (s *FieldContext) RB() antlr.TerminalNode {
	return s.GetToken(ProtobjParserRB, 0)
}

func (s *FieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtobjListener); ok {
		listenerT.EnterField(s)
	}
}
